--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="section-title">Formação Acadêmica</div>
     <div class="section-content">
       <p>- Bacharelado em Administração – FAPEP UNIESP (2011)</p>
-      <p>- Bacharelado em Tecnologia da Informação – UNIVESP (2023)</p>
+      <p>- Bacharelado em Tecnologia da Informação – UNIVESP (2024)</p>
     </div>
   </div>
 
@@ -122,7 +122,15 @@
       <br>
       <p><strong>SAPPP – Sistema de Acompanhamento para Padronização de Processos e Pessoas</strong></p>
       <p>Gera 3 itens diários de um manual de avaliação com campo de busca. Desenvolvido com HTML, CSS, Java, Python e SQL.</p>
+      <br>
+      <p><strong>EUFT – EFETIVIDADE NA UTILIZAÇÃO DA FROTA</strong></p>
+      <p>sistema que faz análise de lançamento de veículos dentro dos métricas estabelecidas. Desenvolvido com HTML, CSS, Java, Python e SQL.</p>
+      <br>
+      <p><strong>GERAI - GESTÃO INTELIGENTE</strong></p>
+      <p>Sistema que faz o registros e acompanhamento de todos as regiões de entregas. Desenvolvido com HTML, CSS, Java, Python e SQL.</p>
+      <br>
     </div>
   </div>
 </body>
 </html>
+
