--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <p>- Gestão de equipes e liderança</p>
       <p>- Análise de processos e melhoria contínua</p>
       <p>- Planejamento e controle operacional</p>
-      <p>- Pacote Office (Excel, Word, PowerPoint)</p>
+      <p>- Pacote Office (Excel, Word, PowerPoint, BI)</p>
     </div>
   </div>
 
@@ -133,4 +133,5 @@
   </div>
 </body>
 </html>
+
 
