--- a/index.html
+++ b/index.html
@@ -1,69 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Currículo - Douglas Francisco da Silva</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Currículo – Douglas Francisco da Silva</title>
   <style>
     body {
-      font-family: 'Calibri', sans-serif;
-      margin: 40px;
-      background-color: #fff;
-      color: #000;
-      line-height: 1.5;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+      color: #333;
     }
     .header {
+      background-color: #002b5c;
+      color: #fff;
       text-align: center;
-      margin-bottom: 20px;
+      padding: 30px 20px;
     }
     .header img {
+      width: 140px;
+      height: 140px;
       border-radius: 50%;
-      width: 150px;
-      height: 150px;
       object-fit: cover;
-    }
-    .header h1 {
-      font-size: 26px;
-      margin-top: 10px;
-      color: #1a237e; /* Azul escuro */
-    }
-    .header p {
-      font-size: 14px;
-      margin: 2px;
+      margin-bottom: 15px;
+      border: 3px solid #ffcc00;
     }
     .section {
-      margin-top: 25px;
+      background-color: #fff;
+      margin: 20px;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
     .section-title {
-      background-color: #e3f2fd; /* Azul claro, sutil */
-      color: #1a237e;
-      padding: 5px 10px;
+      font-size: 22px;
       font-weight: bold;
-      font-size: 16px;
       margin-bottom: 10px;
+      color: #002b5c;
+      border-left: 6px solid #ffcc00;
+      padding-left: 10px;
     }
-    .section-content p {
-      margin: 4px 0;
-      font-size: 14px;
+    p {
+      line-height: 1.6;
     }
     a {
-      color: #1a237e;
+      color: #ffcc00;
       text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
   <!-- Cabeçalho com foto e dados pessoais -->
   <div class="header">
-    <!-- Substitua "your_photo_url_or_path" pelo caminho ou URL da sua foto -->
     <img src="image.png" alt="Douglas Francisco da Silva">
     <h1>DOUGLAS FRANCISCO DA SILVA</h1>
     <p>Pirapozinho – SP | (18) 98192-8468</p>
     <p>d3lsempre@gmail.com</p>
     <p>
-      <a href="https://www.linkedin.com/in/douglas-francisco-da-silva-51953435a" target="_blank">LinkedIn</a> | 
+      <a href="https://www.linkedin.com/in/douglas-francisco-da-silva-51953435a" target="_blank">LinkedIn</a> |
       <a href="https://github.com/dougas85" target="_blank">GitHub</a>
     </p>
   </div>
@@ -73,7 +69,10 @@
     <div class="section-title">Objetivo</div>
     <div class="section-content">
       <p>
-        Busco uma oportunidade de transição de carreira para a área de Tecnologia da Informação, onde possa aplicar minha experiência em gestão, aliada à formação e aos projetos desenvolvidos na área de TI. Tenho grande interesse em aprender, colaborar com equipes técnicas e evoluir profissionalmente com foco em soluções reais e práticas.
+        Atuar como <strong>Coordenador de Operações Logísticas</strong>, aplicando 14 anos de experiência em gestão de equipes,
+        padronização de processos, desempenho operacional e qualidade em Centro de Distribuição dos Correios. Busco contribuir
+        com eficiência, melhoria contínua, planejamento e uso estratégico de tecnologia e análise de dados para otimização das
+        operações logísticas.
       </p>
     </div>
   </div>
@@ -91,11 +90,15 @@
   <div class="section">
     <div class="section-title">Experiência Profissional</div>
     <div class="section-content">
-      <p><strong>Correios</strong> – Gestor Operacional (Desde 2011)</p>
-      <p>- Gerenciamento de processos operacionais com foco em eficiência e qualidade</p>
-      <p>- Liderança de equipes e acompanhamento de desempenho</p>
-      <p>- Gestão orientada a resultados e melhoria contínua dos processos</p>
-      <p>- Comunicação interpessoal, tomada de decisões e resolução de problemas</p>
+      <p><strong>Correios</strong> – Gestor Operacional / Coordenador de Processos (Desde 2011)</p>
+      <p>- Coordenação das operações de recebimento, triagem, transbordo e distribuição.</p>
+      <p>- Liderança e desenvolvimento de equipes operacionais garantindo produtividade e qualidade.</p>
+      <p>- Gestão de indicadores (SLA, produtividade, eficiência, qualidade, acurácia).</p>
+      <p>- Planejamento e controle operacional de fluxo, carga e dimensionamento de equipes.</p>
+      <p>- Responsável regional pela padronização do processo produtivo.</p>
+      <p>- Acompanhamento diário do desempenho operacional e ações de melhoria contínua.</p>
+      <p>- Gestão de conflitos, comunicação interpessoal e tomada de decisão em ambientes críticos.</p>
+      <p>- Suporte à implementação de novos processos e ferramentas internas.</p>
     </div>
   </div>
 
@@ -103,13 +106,33 @@
   <div class="section">
     <div class="section-title">Habilidades Técnicas e Gerenciais</div>
     <div class="section-content">
-      <p>- Fundamentos de programação: Python, HTML, CSS, JavaScript (Udemy)</p>
-      <p>- Noções de banco de dados SQL</p>
-      <p>- Desenvolvimento web básico</p>
-      <p>- Gestão de equipes e liderança</p>
-      <p>- Análise de processos e melhoria contínua</p>
-      <p>- Planejamento e controle operacional</p>
-      <p>- Pacote Office (Excel, Word, PowerPoint, BI)</p>
+      <p><strong>Habilidades Técnicas em Logística e Operações:</strong></p>
+      <p>- Gestão de Centro de Distribuição</p>
+      <p>- Planejamento e Controle Operacional</p>
+      <p>- Padronização e Mapeamento de Processos</p>
+      <p>- Logística Reversa</p>
+      <p>- Gestão de Frota e Roteirização</p>
+      <p>- Indicadores Operacionais (SLA, Produtividade, OTIF, Qualidade)</p>
+      <p>- Lean Logistics, 5S e Melhoria Contínua</p>
+      <p>- Excel Avançado, Power BI</p>
+
+      <br>
+
+      <p><strong>Habilidades Gerenciais:</strong></p>
+      <p>- Liderança de equipes e gestão de desempenho</p>
+      <p>- Comunicação clara e direcionada</p>
+      <p>- Gestão de conflitos</p>
+      <p>- Planejamento estratégico e execução tática</p>
+      <p>- Tomada de decisão sob pressão</p>
+      <p>- Análise crítica e resolução de problemas</p>
+
+      <br>
+
+      <p><strong>Habilidades em Tecnologia (Diferenciais):</strong></p>
+      <p>- Python, SQL</p>
+      <p>- Automação simples de processos</p>
+      <p>- HTML, CSS, JavaScript (básico)</p>
+      <p>- Desenvolvimento de dashboards e análise de dados</p>
     </div>
   </div>
 
@@ -117,21 +140,22 @@
   <div class="section">
     <div class="section-title">Projetos no GitHub</div>
     <div class="section-content">
-      <p><strong>Projeto Integrador</strong></p>
-      <p>Sistema para agendamento de sala de informática em escola pública. Utiliza Streamlit, Python e SQL.</p>
+      <p><strong>Projeto Integrador – Agendamento de Laboratório</strong></p>
+      <p>Sistema criado para gerenciar agendamentos e otimizar uso de recursos. Utiliza Python, Streamlit e SQL.</p>
       <br>
+
       <p><strong>SAPPP – Sistema de Acompanhamento para Padronização de Processos e Pessoas</strong></p>
-      <p>Gera 3 itens diários de um manual de avaliação com campo de busca. Desenvolvido com HTML, CSS, Java, Python e SQL.</p>
+      <p>Ferramenta criada para apoiar padronização operacional e treinamento contínuo. Utiliza Python, HTML, CSS e SQL.</p>
       <br>
-      <p><strong>EUFT – EFETIVIDADE NA UTILIZAÇÃO DA FROTA</strong></p>
-      <p>sistema que faz análise de lançamento de veículos dentro dos métricas estabelecidas. Desenvolvido com HTML, CSS, Java, Python e SQL.</p>
+
+      <p><strong>EUFT – Efetividade na Utilização da Frota</strong></p>
+      <p>Sistema para análise de lançamentos operacionais de veículos, melhorando precisão e eficiência das operações. Desenvolvido com Python, HTML, CSS e SQL.</p>
       <br>
-      <p><strong>GERAI - GESTÃO INTELIGENTE</strong></p>
-      <p>Sistema que faz o registros e acompanhamento de todos as regiões de entregas. Desenvolvido com HTML, CSS, Java, Python e SQL.</p>
-      <br>
+
+      <p><strong>GERAI – Gestão Inteligente</strong></p>
+      <p>Sistema para registro e acompanhamento de todas as regiões de entrega, com foco em desempenho e produtividade. Desenvolvido em Python, HTML, CSS e SQL.</p>
     </div>
   </div>
+
 </body>
 </html>
-
-
