--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <p><strong>Correios</strong> – Gestor Operacional / Coordenador de Processos (Desde 2011)</p>
       <p>- Coordenação das operações de recebimento, triagem, transbordo e distribuição.</p>
       <p>- Liderança e desenvolvimento de equipes operacionais garantindo produtividade e qualidade.</p>
-      <p>- Gestão de indicadores (SLA, produtividade, eficiência, qualidade, acurácia).</p>
+      <p>- Gestão de indicadores (produtividade, eficiência, qualidade, acurácia).</p>
       <p>- Planejamento e controle operacional de fluxo, carga e dimensionamento de equipes.</p>
       <p>- Responsável regional pela padronização do processo produtivo.</p>
       <p>- Acompanhamento diário do desempenho operacional e ações de melhoria contínua.</p>
@@ -111,8 +111,9 @@
       <p>- Planejamento e Controle Operacional</p>
       <p>- Padronização e Mapeamento de Processos</p>
       <p>- Logística Reversa</p>
-      <p>- Gestão de Frota e Roteirização</p>
-      <p>- Indicadores Operacionais (SLA, Produtividade, OTIF, Qualidade)</p>
+      <p>- Gestão de Frota e Roteirização (TMS)</p>
+      <p>- Indicadores Operacionais (EPTC, IEPE, SGPD, EUFT)</p>
+      <p>- Combate ao extravio e perdas operacionais.</p>
       <p>- Lean Logistics, 5S e Melhoria Contínua</p>
       <p>- Excel Avançado, Power BI</p>
 
@@ -159,3 +160,4 @@
 
 </body>
 </html>
+
