--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="section-title">Experiência Profissional</div>
     <div class="section-content">
       <p><strong>Correios</strong> – Gestor Operacional / Coordenador de Processos (Desde 2011)</p>
-      <p>- Coordenação das operações de recebimento, triagem, transbordo e distribuição.</p>
+      <p>- Coordenação das operações de recebimento, triagem, transbordo e distribuição em unidade com cerca 100 funcionários.</p>
       <p>- Liderança e desenvolvimento de equipes operacionais garantindo produtividade e qualidade.</p>
       <p>- Gestão de indicadores (produtividade, eficiência, qualidade, acurácia).</p>
       <p>- Planejamento e controle operacional de fluxo, carga e dimensionamento de equipes.</p>
@@ -160,4 +160,5 @@
 
 </body>
 </html>
+
 
